--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -66,19 +66,18 @@
 
 
 \begin{abstract}
-\ndg{the basic framing shouldn't be habituals vs generics. it should be how do habituals work to convey generalizations about events? and then the analogy with generics motivates our approach...}
+%\ndg{the basic framing shouldn't be habituals vs generics. it should be how do habituals work to convey generalizations about events? and then the analogy with generics motivates our approach...}
 Habitual sentences (e.g. \emph{Bills smokes.}) generalize an event over time, but what makes a habitual sentence true?
 % and are thought to have similarly puzzling qualities as generic sentences (e.g. \emph{Dogs bark.}). 
-Little empirical work has tested this relation with respect to the truth conditions of these sentences. 
-We develop a computational model of communicating generalizations about events, and use this guide to our experiments into the truth conditions of habitauls.
+We develop a computational model of communicating generalizations about events, and use this to guide experiments into the truth conditions of habitual language.
+%Little empirical work has tested this relation with respect to the truth conditions of these sentences. 
 %We test the analogy between habitual and generic language by applying a recent formal theory of generic language to the domain of events.
-In Expts.~1 \& 2, we measure the prior and explore the predictions of this model for the
-``frequency'' conditions (i.e. how often a person must do an action) 
-by which habituals becomes felicitous.
+In Expts.~1 \& 2, we measure participants' prior expectations about the frequency with which an action is carried out and explore the predictions of the model for the``propensity'' conditions (i.e. how often a person must do an action) by which habituals becomes felicitous.
 % the under which various habituals may be felicitous utterances. 
-In Expt.~3, we harness the richness of intuitive theories of human behavior to explore more deeply the nature of ``frequency'' conditions with respect to time.
-Using our computational approach, we find the analogy between generic and habitual language to be well-suited, and that the communicating generalizations about events relies upon being informative about the future.
-Methodological implications from this are discussed.
+In Expts.~3 \& 4, we harness the richness of intuitive theories of human behavior to explore more deeply the nature of propensity conditions with respect to time.
+We find that predicted, future frequency requires an integration of observed frequency with top-down biases from intuitive theories.
+This provides the first empirical work to address the posited connection between generalizations about categories (i.e. generic language) and habituals. 
+Using our computational approach, we find the analogy between generic and habitual language to be well-suited.
 
 %by manipulating X and show that \emph{predictive} future frequency is what drives the model predictions and human judgments. 
 
@@ -464,6 +463,7 @@ The experiment took 4 minutes on average on participants were compensated \$0.40
 
 The only difference from Expt.~3 is in the dependent measure.
 Participants were asked ``In the next \textsc{time window}, how many times do you think \textsc{person} does \textsc{event}?'', where the \textsc{time window} was the same as given in the \emph{past frequency statement}.
+The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habituals/experiments/priors/predictive-1.html}.
 
 \subsection{Behavioral results}
 
