--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -232,8 +232,8 @@ The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habit
 
 \begin{figure*}[t]
 \centering
-  \includegraphics[width=\textwidth]{tj-scatter-2}
-  \caption{\mht{Need to run chains for longer}}
+  \includegraphics[width=\textwidth]{tj-scatters}
+  \caption{}
   \label{fig:tjScatters}
 \end{figure*}
 
@@ -347,15 +347,14 @@ Because we observe no difference between the felicity judgments for habituals of
 \end{minipage}
 
 Having fit the prior empirically, the model was one parameter -- the speaker optimality parameter in Eq.~\ref{eq:S1}. 
-Additionally, we include a data analytic parameter to model random guessing behavior; this provides a rough measure of how much variance is unexplained by the pragmatics model. 
-We use Bayesian data analytic techniques to integrate over these parameters \cite{LW2014}, and compare the posterior predictive distribution of this model to the empirical data in Expt.~2.
-\mht{remove guessing parameter?}
+%Additionally, we include a data analytic parameter to model random guessing behavior; this provides a rough measure of how much variance is unexplained by the pragmatics model. 
+We use Bayesian data analytic techniques to integrate over this parameter \cite{LW2014}, and compare the posterior predictive distribution of this model to the empirical data in Expt.~2.
 
-To attain credible values of the model parameters as well as the posterior predictive distribution over responses, we collected 3 MCMC chains of 30,000 iterations, discarding the first 15,000 iterations of each chain for burn in.
-The Maximum A-Posteriori (MAP) value and 95\% highest probability density (HPD) interval for the speaker optimality parameter in Eq.~\ref{eq:S1} is 4.7 [3.7,5.2].
-The MAP and HPD interval for the data-analytic guessing parameter is 0.004 [0.0003, 0.03], suggesting that there is not a substantial amount of the data that is better explained by a model of random guessing than by our pragmatic speaker model.
+To attain credible values of the model parameters as well as the posterior predictive distribution over responses, we collected an MCMC chain of 50,000 iterations, discarding the first 25,000 iterations for burn in.
+The Maximum A-Posteriori (MAP) value and 95\% highest probability density (HPD) interval for the speaker optimality parameter in Eq.~\ref{eq:S1} is 5.7 [5.1,6.2].
+%The MAP and HPD interval for the data-analytic guessing parameter is 0.004 [0.0003, 0.03], suggesting that there is not a substantial amount of the data that is better explained by a model of random guessing than by our pragmatic speaker model.
 
-The probabilistic pragmatics model does a good job of accounting for the variability in responses ($r^2(93) = 0.89$), including actions done on the time scale of years or more  ($r^2(50) = 0.89$) (Figure \ref{fig:tjScatters} right).
+The probabilistic pragmatics model does a good job of accounting for the variability in responses ($r^2(93) = 0.94$), including actions done on the time scale of years or more  ($r^2(50) = 0.92$) (Figure \ref{fig:tjScatters} right).
 The model decides when the habitual is a useful way to describe the person's behavior, assuming that what the person did in the past is representative. 
 This raises an interesting question: Does the propensity communicated by the habitual indicate a past frequency or a future expectation?
 
