--- a/writing/_cogsci2016/habituals-cogsci2016.tex
+++ b/writing/_cogsci2016/habituals-cogsci2016.tex
@@ -367,11 +367,13 @@ People change in a way that natural kinds cannot: People can modify their behavi
 %In some sense, one can only know \emph{past frequency} of action because that is all that has occurred.
 %On the other hand, language has a communicative function, and only \emph{predictive frequency} will be helpful in the future.
 Does habitual language communicate a propensity in terms of past frequency or about future expectations?
-In this experiment, we address this by introducing causal factors that enable and prevent future actions (e.g. buying a pack of cigarettes; developing an allergy) and examining felicity judgments of the habitual sentence (e.g. \emph{John smokes cigarettes.}; \emph{John eats peanut butter.}).
+In this set of experiments, we address this by introducing causal factors that enable and prevent future actions (e.g. buying a pack of cigarettes; developing an allergy).
+In Expt.~3a, we measure \emph{predictive frequency} when these causal factors are introduced as well as when just a past frequency is observed; testing the correspondence of past frequency with future frequency allows us validate the model predictions in Expt.~2 (where past frequency was assumed to be the target of communication).
+In Expt.~3b, we examine felicity judgments of the habitual sentence (e.g. \emph{John smokes cigarettes.}; \emph{John eats peanut butter.}) and use the speaker $S_2$ model to predict the truth judgments using the elicited \emph{predictive frequency}  as the input to the model.
 %\ndg{pose the question of this expriment more clearly: is propensity about past frequency or future expectations? then say briefly how we address it.}
 
+\subsection{Experiment 3a: Prediction elicitation with causal knowledge}
 
-\subsection{Method}
 \begin{figure*}[t]
 \centering
 %  \includegraphics[width=\textwidth]{truth-judgments-3items-withtj2.pdf}
@@ -379,30 +381,59 @@ In this experiment, we address this by introducing causal factors that enable an
   \caption{Left: Endorsements of habitual sentences (Expt.~3) vs. Predicted log frequency (Expt.~4). Middle: Predicted log frequency as a function of past log frequency supplied to the participant (Expt.~4). Right: Human endorsements (Expt.~3) vs. Speaker $S_2$ model predictions using the empirically elicited predictive frequencies (Expt.~4)}
   \label{fig:tj3}
 \end{figure*}
-
+\subsubsection{Method}
 \subsubsection{Participants} 
 
-We recruited 150 participants from MTurk, using the same criterion as Expt.~2.
+We recruited 120 participants from MTurk, using the same criterion as Expt.~2.
 The experiment took 4 minutes on average on participants were compensated \$0.40 for their work.
 
-\subsubsection{Procedure}
+\subsubsection{Procedure and materials}
 
-The procedure was identical to Expt.~2 except for the inclusion of a second sentence on a subset of trials. 
+The procedure was identical to Expt.~2 except for the inclusion of a second sentence on a subset of trials and the use of a different dependent measure. 
 On all trials, participants were presented with a \emph{past frequency sentence} (see Expt.~2).
-Additionally, on one third of the trials, participants were presented with a \textbf{preventative sentence} (e.g. \emph{Yesterday, Bill quit smoking.}). %that aimed to decrease the acceptability of the habitual sentence (\emph{Bill smokes}).
-% even in the face of strong past frequency evidence (\emph{Last week, Bill smoked 3 times.}).
+Additionally, on one third of the trials, participants were presented with a \textbf{preventative sentence} (e.g. \emph{Yesterday, Bill quit smoking.}). %that aimed to decrease the 
 On one third of the trials, participants were presented with an \textbf{enabling sentence} (\emph{Yesterday, Bill bought a pack of cigarettes.}) %that sought to reinforce the past frequency that aimed to increase the acceptability of the habitual sentence when the past frequency evidence was not strong. 
 The final third of trials had no additional evidence and were identical to Expt.~2. 
+
+%The only difference from Expt.~3 is in the dependent measure.
+Participants were asked ``In the next \textsc{time window}, how many times do you think \textsc{person} does \textsc{event}?'', where the \textsc{time window} was the same as given in the \emph{past frequency statement}.
+The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habituals/experiments/priors/predictive-1.html}.
 
 \subsubsection{Materials}
 
 Twenty-one of the original thirty-one items were used in order to shorten the experiment.
 To increase expected variability, participants saw the frequencies that led to most intermediate endorsement of the habitual in Expt.~2. 
 In addition, we did not include trials for both male and female names for the select items we did in Expt.~2, since we saw no differences in their endorsements of the habitual.
-The dependent measure was the same as in Expt.~2. 
+%The dependent measure was the same as in Expt.~2. 
+
+\subsubsection{Behavioral results}
+
+Figure \ref{fig:tj3} (middle) shows the predicted future frequency as a function of the past frequency given to the participant and the type of conceptual information given (in color; confidence intervals suppressed and jitter added for visual clarity). 
+We observe in the baseline condition that future frequency perfectly tracks past frequency (e.g. participants believe if a person smoked cigarettes 3 times last month, they will smoke cigarettes 3 times next month). 
+This validates the assumption we used in our model of Expt.~2, where the speaker model intended to communicate past frequency.
+Critically, we observe the preventative information appreciably decreasing and the enabling information increasing predicted frequency (Figure \ref{fig:tj3} middle; blue and green dots).
+
+
+
+
+\subsection{Experiment 3b: Felicity judgments with causal knowledge}
+
+
+\subsubsection{Method}
+\subsubsection{Participants} 
+
+We recruited 150 participants from MTurk, using the same criterion as Expt.~2.
+The experiment took 4 minutes on average on participants were compensated \$0.40 for their work.
+None of the participants had completed Expt.~3a.
+
+\subsubsection{Procedure and materials}
+
+The only difference from Expt.~3a is the dependent measure. 
+On each trial, participants were asked if they agreed or disagreed with the corresponding habitual sentence (as in Expt.~2).
 The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habituals/experiments/truth-judgments/tj-3-preventative.html}.
 
-\subsection{Behavioral results}
+
+\subsubsection{Behavioral results}
 
 There is a clear and consistent negative effect of preventative information on the tendency to endorse the habitual sentence (Figure \ref{fig:tj3}, left; blue points).
 When collapsing across items and subjecting the data to a mixed-effects model with random by-participant effects of intercept and random by-item effects of intercept and conditions, we find evidence for a small effect of \emph{enabling} conditions on endorsements (M =  0.89 [0.88, 0.91]) as compared to baseline (M = 0.85 [0.83, 0.87]) --- $\beta = 0.42; SE = 0.15; z = 2.8; p = 0.005$, in addition to a large effect of \emph{preventative} conditions on endorsements (M = 0.29 [0.26, 0.31]) --- $\beta = -3.22; SE = 0.21; z = -15.2; p < 0.001$. 
@@ -445,37 +476,14 @@ This may be due, in part, to an effect of the experiment context on participants
 %conditionpreventative   3.2262     0.2125  15.181  < 2e-16 ***
 %---
 
-These results suggest that the felicity of habituals is based on an underlying scale of \emph{predictive} frequency of action.
-If that is the case, we would expect judgments of future frequency to be the target of communication. 
-In Expt.~4, we measure predictions about future frequency and use those as input to the speaker model $S_2$ to predict the felicity judgments from Expt.~3.
-
-%Habitual language is useful when it corresponds to future predictions of people's actions.
-
-\section{Experiment 4: Predicted frequency}
-\subsection{Method}
-\subsubsection{Participants} 
-
-We recruited 120 participants from MTurk, using the same criterion as Expt.~2.
-None of these participants were in Expt.~3.
-The experiment took 4 minutes on average on participants were compensated \$0.40 for their work.
-
-\subsubsection{Procedure and materials}
-
-The only difference from Expt.~3 is in the dependent measure.
-Participants were asked ``In the next \textsc{time window}, how many times do you think \textsc{person} does \textsc{event}?'', where the \textsc{time window} was the same as given in the \emph{past frequency statement}.
-The experiment in full can be viewed at \url{http://stanford.edu/~mtessler/habituals/experiments/priors/predictive-1.html}.
-
-\subsection{Behavioral results}
-
-Figure \ref{fig:tj3} (middle) shows the predicted future frequency as a function of the past frequency given to the participant and the type of conceptual information given (in color; confidence intervals suppressed and jitter added for visual clarity). 
-We observe in the baseline condition that future frequency perfectly tracks past frequency (e.g. participants believe if a person smoked cigarettes 3 times last month, they will smoke cigarettes 3 times next month). 
-This validates the assumption we used in our model of Expt.~2, where the speaker model intended to communicate past frequency.
-Critically, we observe the preventative information appreciably decreasing and the enabling information increasing predicted frequency (Figure \ref{fig:tj3} middle; blue and green dots).
-
 \subsection{Model results}
 
-We use the mean predicted log frequency as the input to the speaker $S_2$ and infer the parameter using the same analysis approach in Expt.~2. 
+We use the mean predicted log frequency from Expt.~3a as the input to the speaker $S_2$ model to predict the felicity judgments measured in Expt.~3b.
+We infer the one model parameter using the same analysis approach in Expt.~2. 
 The model matches the data well ($r^2(63) = 0.91$).
+These results suggest that the felicity of habituals is based on an underlying scale of \emph{predictive} frequency of action.
+
+%Habitual language is useful when it corresponds to future predictions of people's actions.
 
 \section{Discussion}
 
